# Automation_Scripts_To_CMakeProject

./: CMakeLists.txt  build_debug.bat  build_release.bat  format_all_files.bat  generate_project_files.bat  init_first_git.bat
Automation/: automation.py  automation_git.py  build.bat  build_git.bat  build_sample_script.py
Source/: main.cpp
Source/Game/: Character.cpp  Character.h  Weapon.cpp  Weapon.h
Source/Utils/: Math.cpp  Math.h
